Link partial purchase order receipts to material stock
